2005-10-26  Jan Beulich  <jbeulich@novell.com>

	* config/tc-i386.c (i386_operand): Don't check register prefix here.
	(parse_real_register): Rename from parse_register.
	(parse_register): New.
	(i386_parse_name): New.
	(md_operand): New.
	(intel_e11): Don't tolerate registers in offset expressions anymore.
	(intel_get_token): Don't check register prefix here. Copy the actual
	register token, not the canonical register name.
	* config/tc-i386.h (md_operand): Delete.
	(i386_parse_name): Declare.
	(md_parse_name): Define.

2005-10-25  Arnold Metselaar  <arnold.metselaar@planet.nl>

	* Makefile.am: Add Z80 cpu.
	* Makefile.in: Regenerated.
	* app.c (do_scrub_chars)<TC_Z80>: Correctly scrub "ex af,af'" 
	and disallow newlines in quoted strings.
	* configure.tgt: Add z80-*-coff.
	* config/obj-coff.h: Add format "coff-z80".
	* doc/Makefile.am: Add c-z80.texi.
	* doc/Makefile.in: Regenerated.
	* doc/all.texi: Add Z80.
	* doc/c-z80.texi: New file
	* doc/as.texinfo: Add z80 options and some z80-related remarks.
	* config/tc-z80.c: New file
	* config/tc-z80.h: New file
	* NEWS: Mention new support.

2005-10-25  H.J. Lu  <hongjiu.lu@intel.com>

	* write.c (adjust_reloc_syms): Undo the change made on
	2005-04-26 to allow local symbol set to undefined symbol.

2005-10-24  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am (bfin-parse.tab.h): Removed.
	(bfin-parse.h): Added.
	* Makefile.in: Regenerated.

2005-10-25  Alan Modra  <amodra@bigpond.net.au>

	* po/POTFILES.in: Regenerate.
	* po/gas.pot: Regenerate.

2005-10-24  Bernd Schmidt  <bernd.schmidt@analog.com>

	* config/tc-bfin.c (Expr_Node_Gen_Reloc): If have symbol + constant,
	make a single reloc with an offset rather than a stack.
	* config/tc-bfin.h (MD_APPLY_SYM_VALUE): Define to 0.

2005-10-24  Alexandre Oliva  <aoliva@redhat.com>

	* read.c (potable): Add weakref.
	(s_weakref): New.
	* read.h (s_weakref): Declare.
	* struc-symbol.h (struct symbol): Add sy_weakrefr and sy_weakrefd.
	* symbols.c (colon): Clear weakrefr.