@@ -1,3 +1,7 @@
+2005-10-26  Paul Brook  <paul@codesourcery.com>
+
+	* arm-dis.c (arm_opcodes): Correct "sel" entry.
+
 2005-10-26  Kazuhiro Inaoka <inaoka.kazuhiro@renesas.com>
 
 	* m32r-asm.c: Regenerate.
