@@ -1,3 +1,7 @@
+2005-10-26  Paul Brook  <paul@codesourcery.com>
+
+	* config/tc-arm.c (insns): Correct "sel" entry.
+
 2005-10-26  Jan Beulich  <jbeulich@novell.com>
 
 	* config/tc-i386.c (i386_operand): Don't check register prefix here.
